Fixed: open grafik.exe does not work